fixed more spacing issues

--- a/syshard.css
+++ b/syshard.css
@@ -25,7 +25,7 @@ div.xkcd {
 }
 div.slide
 {
-    min-height: 500px;
+    min-height: 600px;
     background-color: white;
 }
 div.questions
